[package]
name = "rust-simple-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main2"
path = "src/main2.rs"

[dependencies]
diesel = { version = "2.1.3", features = ["sqlite"] }
dotenvy = "0.15.7"
